# backend

./: .gitignore  .gitinore  .replit  LOCAL_SETUP.md  RESULT_CODE_REVIEW.md  docker-compose.yml  install_db.sh  replit.md  setup_local_backend.sh  start_local_backend.sh  start_services.sh  test_endpoints.sh
api_gateway/: Dockerfile  nginx.conf
bets_service/: Dockerfile  requirements.txt
frontend/: .gitignore  Dockerfile  components.json  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
matches_service/: Dockerfile  requirements.txt
teams/: .dockerignore  DESIGN_PATTERNS.md  Dockerfile  README.md  TEST_COVERAGE_MAP.md  config.py  main.py  pyproject.toml  pytest.ini
teams/src/adapters/: __init__.py  data_source_adapter.py
teams/src/api/: dependencies.py
teams/src/api/schemas/: athletes.py  teams.py
teams/src/api/v1/: athletes.py  patterns_demo.py  teams.py
teams/src/db/: database.py  models.py
teams/src/db/repositories/: __init__.py  athlete_repository.py  base.py  logging_decorator.py  team_repository.py
teams/src/services/: __init__.py  error_handlers.py  logger.py  logger_strategies.py  team_service.py
teams/tests/: conftest.py
teams/tests/integration/: test_api_integration.py  test_repositories_integration.py  test_team_service_integration.py
teams/tests/unit/adapters/: test_data_source_adapter.py
teams/tests/unit/api/: test_athletes_api.py  test_teams_api.py
teams/tests/unit/db/: test_models.py  test_repositories_base.py  test_repositories_specific.py
teams/tests/unit/services/: test_team_service.py
(+109 files in other folders)
