[tool.poetry]
name = "teams-backend"
version = "0.1.0"
description = "A backend service for managing teams and athletes."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.43"
aiosqlite = "^0.17.0"
pydantic = "^2.10.1"
pydantic-settings = "^2.10.1"
accessify = "^0.3.1"
asyncpg = "^0.30.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"